iommu/amd: Recover from event log overflow (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9760,6 +9760,7 @@
 	patches.suse/ASoC-cs4265-Fix-the-duplicated-control-name.patch
 	patches.suse/ALSA-intel_hdmi-Fix-reference-to-PCM-buffer-address.patch
 	patches.suse/thermal-core-Fix-TZ_GET_TRIP-NULL-pointer-dereferenc.patch
+	patches.suse/iommu-amd-Recover-from-event-log-overflow
 	patches.suse/iommu-vt-d-fix-double-list_add-when-enabling-vmd-in-scalable-mode
 	patches.suse/blktrace-fix-use-after-free-for-struct-blk_trace.patch
 	patches.suse/s390-extable-fix-exception-table-sorting
