iommu/tegra-smmu: Fix missing put_device() call in tegra_smmu_find (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9763,6 +9763,7 @@
 	patches.suse/iommu-amd-Recover-from-event-log-overflow
 	patches.suse/iommu-amd-Fix-I-O-page-table-memory-leak
 	patches.suse/iommu-vt-d-fix-double-list_add-when-enabling-vmd-in-scalable-mode
+	patches.suse/iommu-tegra-smmu-Fix-missing-put_device-call-in-tegra_smmu_find
 	patches.suse/blktrace-fix-use-after-free-for-struct-blk_trace.patch
 	patches.suse/s390-extable-fix-exception-table-sorting
 	patches.suse/kselftest-vm-fix-tests-build-with-old-libc.patch
