--- a/series.conf
+++ b/series.conf
@@ -12642,6 +12642,7 @@
 	patches.suse/fbcon-Disallow-setting-font-bigger-than-screen-size.patch
 	patches.suse/fbcon-Prevent-that-screen-size-is-smaller-than-font-.patch
 	patches.suse/fbmem-Check-virtual-screen-sizes-in-fb_set_var.patch
+	patches.suse/iommu-vt-d-Fix-PCI-bus-rescan-device-hot-add
 	patches.suse/iommu-vt-d-Fix-RID2PASID-setup-teardown-failure
 	patches.suse/memregion-Fix-memregion_free-fallback-definition.patch
 	patches.suse/ACPI-CPPC-Only-probe-for-_CPC-if-CPPC-v2-is-acked.patch
