--- a/series.conf
+++ b/series.conf
@@ -7223,6 +7223,7 @@
 	patches.suse/io_uring-Fix-undefined-behaviour-in-io_issue_sqe.patch
 	patches.suse/tracing-Check-pid-filtering-when-creating-events.patch
 	patches.suse/tracing-Fix-pid-filtering-when-triggers-are-attached.patch
+	patches.suse/iommu-amd-Clarify-AMD-IOMMUv2-initialization-messages
 	patches.suse/iommu-rockchip-fix-page_desc_hi_masks-for-rk3568
 	patches.suse/iommu-vt-d-fix-unmap_pages-support
 	patches.suse/locking-rwsem-Optimize-down_read_trylock-under-highl.patch
