--- a/series.conf
+++ b/series.conf
@@ -12131,6 +12131,7 @@
 	patches.suse/iommu-mediatek-Fix-NULL-pointer-dereference-when-printing-dev_na
 	patches.suse/iommu-msm-Fix-an-incorrect-NULL-check-on-list-iterator
 	patches.suse/iommu-arm-smmu-v3-sva-Fix-mm-use-after-free
+	patches.suse/iommu-amd-Enable-swiotlb-in-all-cases
 	patches.suse/iommu-amd-Increase-timeout-waiting-for-GA-log-enablement
 	patches.suse/i2c-at91-use-dma-safe-buffers.patch
 	patches.suse/i2c-at91-Initialize-dma_buf-in-at91_twi_xfer.patch
