--- a/series.conf
+++ b/series.conf
@@ -11406,6 +11406,7 @@
 	patches.suse/iommu-arm-smmu-v3-Fix-size-calculation-in-arm_smmu_mm_invalidate
 	patches.suse/iommu-arm-smmu-disable-large-page-mappings-for-Nvidi.patch
 	patches.suse/iommu-dart-check-return-value-after-calling-platform_get_resourc
+	patches.suse/iommu-dart-Add-missing-module-owner-to-ops-structure
 	patches.suse/can-grcan-grcan_close-fix-deadlock.patch
 	patches.suse/can-grcan-use-ofdev-dev-when-allocating-DMA-memory.patch
 	patches.suse/can-grcan-grcan_probe-fix-broken-system-id-check-for.patch
