iommu: Fix potential use-after-free during probe (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9267,6 +9267,7 @@
 	patches.suse/ASoC-rt5682-Fix-deadlock-on-resume.patch
 	patches.suse/Input-wm97xx-Simplify-resource-management.patch
 	patches.suse/random-wake-up-dev-random-writers-after-zap.patch
+	patches.suse/iommu-Fix-potential-use-after-free-during-probe
 	patches.suse/iommu-vt-d-fix-potential-memory-leak-in-intel_setup_irq_remapping
 	patches.suse/iommu-amd-fix-loop-timeout-issue-in-iommu_ga_log_enable
 	patches.suse/nvme-fix-a-possible-use-after-free-in-controller-res.patch
