--- a/series.conf
+++ b/series.conf
@@ -9761,6 +9761,7 @@
 	patches.suse/ALSA-intel_hdmi-Fix-reference-to-PCM-buffer-address.patch
 	patches.suse/thermal-core-Fix-TZ_GET_TRIP-NULL-pointer-dereferenc.patch
 	patches.suse/iommu-amd-Recover-from-event-log-overflow
+	patches.suse/iommu-amd-Fix-I-O-page-table-memory-leak
 	patches.suse/iommu-vt-d-fix-double-list_add-when-enabling-vmd-in-scalable-mode
 	patches.suse/blktrace-fix-use-after-free-for-struct-blk_trace.patch
 	patches.suse/s390-extable-fix-exception-table-sorting
