iommu/mediatek: Fix NULL pointer dereference when printing dev_name (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12128,6 +12128,7 @@
 	patches.suse/iommu-mediatek-Add-list_del-in-mtk_iommu_remove
 	patches.suse/iommu-mediatek-Remove-clk_disable-in-mtk_iommu_remove
 	patches.suse/iommu-mediatek-Add-mutex-for-m4u_group-and-m4u_dom-in-data
+	patches.suse/iommu-mediatek-Fix-NULL-pointer-dereference-when-printing-dev_na
 	patches.suse/iommu-arm-smmu-v3-sva-Fix-mm-use-after-free
 	patches.suse/iommu-amd-Increase-timeout-waiting-for-GA-log-enablement
 	patches.suse/i2c-at91-use-dma-safe-buffers.patch
