blacklist.conf: add various fixes
Signed-off-by: Mian Yousaf Kaukab <ykaukab@suse.de>

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1580,3 +1580,12 @@ a54e04914c211b5678602a46b3ede5d82ec1327d # cleanup that breaks kABI
 cd8732cdcc37d7077c4fa2c966b748c0662b607e # cosmetic fix
 ef1dac6021cc8ec5de02ce31722bf26ac4ed5523 # breaks kABI, preparation commit for 262e6ae7081d ("modules: inherit TAINT_PROPRIETARY_MODULE") which is not taken
 262e6ae7081df304fc625cf368d5c2cbba2bb991 # not strictly needed, requires kABI-breaking ef1dac6021cc ("modules: return licensing information from find_symbol")
+c8013355ead68dce152cf426686f8a5f80d88b40 # Device tree fix
+e8f24c58d1b69ecf410a673c22f546dc732bb879 # Device tree fix
+61192a9d8a6367ae1b8234876941b037910a2459 # Device tree fix
+293083f877a7d9dba8165cc3bd159cbfcea28fe7 # Not applicable as commmit 92cadf68e50a is properly applied
+ae2778a64724f77fd6cad674461a045fb3307df7 # Missing dependencies
+a9e9b091a1c14ecd8bd9d3214a62142a1786fe30 # Missing dependency in mt7530.c. See patches.suse/net-of_get_phy_mode-Change-API-to-solve-int-unit-war.patch
+39e0f991a62ed5efabd20711a7b6e7da92603170 # Optimization. Breaks kABI
+96ca08c05838d1f5501003f0a6201824e4eede70 # Missing dependencies
+3550bba25d5587a701e6edf20e20984d2ee72c78 # Breaks kABI; No consumers of chip->of_gpio_ranges_fallback
