--- a/series.conf
+++ b/series.conf
@@ -56279,6 +56279,7 @@
 	patches.suse/fbcon-Disallow-setting-font-bigger-than-screen-size.patch
 	patches.suse/fbcon-Prevent-that-screen-size-is-smaller-than-font-.patch
 	patches.suse/fbmem-Check-virtual-screen-sizes-in-fb_set_var.patch
+	patches.suse/iommu-vt-d-Fix-PCI-bus-rescan-device-hot-add
 	patches.suse/memregion-Fix-memregion_free-fallback-definition.patch
 	patches.suse/powerpc-powernv-delay-rng-platform-device-creation-u.patch
 	patches.suse/i2c-cadence-Unregister-the-clk-notifier-in-error-pat.patch
