--- a/series.conf
+++ b/series.conf
@@ -56596,6 +56596,7 @@
 	patches.suse/scsi-qla2xxx-Fix-sparse-warning-for-dport_data.patch
 	patches.suse/scsi-qla2xxx-Update-manufacturer-details.patch
 	patches.suse/scsi-qla2xxx-Update-version-to-10.02.07.800-k.patch
+	patches.suse/vfio-ccw-Remove-UUID-from-s390-debug-log
 	patches.suse/iommu-arm-smmu-qcom_iommu-Add-of_node_put-when-breaking-out-of-l
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
