--- a/series.conf
+++ b/series.conf
@@ -55316,6 +55316,7 @@
 	patches.suse/scsi-lpfc-SLI-path-split-Refactor-BSG-paths.patch
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.2.0.0.patch
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.2.0.0-patches.patch
+	patches.suse/iommu-ipmmu-vmsa-Check-for-error-num-after-setting-mask
 	patches.suse/powerpc-add-link-stack-flush-mitigation-status-in-de.patch
 	patches.suse/powerpc-pseries-read-the-lpar-name-from-the-firmware.patch
 	patches.suse/powerpc-64-Move-paca-allocation-later-in-boot.patch
