--- a/series.conf
+++ b/series.conf
@@ -55507,6 +55507,7 @@
 	patches.suse/gpu-ipu-v3-Fix-dev_dbg-frequency-output.patch
 	patches.suse/drm-amd-display-Fix-allocate_mst_payload-assert-on-r.patch
 	patches.suse/drm-amdgpu-smu10-fix-SoC-fclk-units-in-auto-mode.patch
+	patches.suse/iommu-omap-Fix-regression-in-probe-for-NULL-pointer-dereference
 	patches.suse/Revert-mmc-sdhci-xenon-fix-annoying-1.8V-regulator-w.patch
 	patches.suse/mmc-mmci-stm32-correctly-check-all-elements-of-sg-li.patch
 	patches.suse/mmc-renesas_sdhi-don-t-overwrite-TAP-settings-when-H.patch
