--- a/series.conf
+++ b/series.conf
@@ -55664,6 +55664,7 @@
 	patches.suse/iio-dac-ad5446-Fix-read_raw-not-returning-set-value.patch
 	patches.suse/objtool-Fix-type-of-reloc-addend.patch
 	patches.suse/hwmon-f71882fg-Fix-negative-temperature.patch
+	patches.suse/iommu-vt-d-Calculate-mask-for-non-aligned-flushes
 	patches.suse/can-grcan-grcan_close-fix-deadlock.patch
 	patches.suse/can-grcan-use-ofdev-dev-when-allocating-DMA-memory.patch
 	patches.suse/hinic-fix-bug-of-wq-out-of-bound-access.patch
