--- a/series.conf
+++ b/series.conf
@@ -56023,6 +56023,7 @@
 	patches.suse/dmaengine-stm32-mdma-remove-GISR1-register.patch
 	patches.suse/video-fbdev-clcdfb-Fix-refcount-leak-in-clcdfb_of_vr.patch
 	patches.suse/video-fbdev-pxa3xx-gcu-release-the-resources-correct.patch
+	patches.suse/iommu-mediatek-Add-list_del-in-mtk_iommu_remove
 	patches.suse/iommu-amd-Increase-timeout-waiting-for-GA-log-enablement
 	patches.suse/i2c-at91-use-dma-safe-buffers.patch
 	patches.suse/i2c-at91-Initialize-dma_buf-in-at91_twi_xfer.patch
