--- a/series.conf
+++ b/series.conf
@@ -56624,6 +56624,7 @@
 	patches.suse/ACPI-property-Return-type-of-acpi_add_nondev_subnode.patch
 	patches.suse/virtio_net-fix-memory-leak-inside-XPD_TX-with-mergea.patch
 	patches.suse/atm-idt77252-fix-use-after-free-bugs-caused-by-tst_t.patch
+	patches.suse/Bluetooth-L2CAP-Fix-l2cap_global_chan_by_psm-regress.patch
 
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
