--- a/series.conf
+++ b/series.conf
@@ -56629,6 +56629,7 @@
 	patches.suse/geneve-fix-TOS-inheriting-for-ipv4.patch
 	patches.suse/geneve-do-not-use-RT_TOS-for-IPv6-flowlabel.patch
 	patches.suse/can-ems_usb-fix-clang-s-Wunaligned-access-warning.patch
+	patches.suse/vsock-Fix-memory-leak-in-vsock_connect.patch
 
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
