can: ems_usb: fix clang's -Wunaligned-access warning (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56628,6 +56628,7 @@
 	patches.suse/Bluetooth-MGMT-Fixes-build-warnings-with-C-1.patch
 	patches.suse/geneve-fix-TOS-inheriting-for-ipv4.patch
 	patches.suse/geneve-do-not-use-RT_TOS-for-IPv6-flowlabel.patch
+	patches.suse/can-ems_usb-fix-clang-s-Wunaligned-access-warning.patch
 
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
