atm: idt77252: fix use-after-free bugs caused by tst_timer (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56623,6 +56623,7 @@
 	patches.suse/pinctrl-sunxi-Add-I-O-bias-setting-for-H6-R-PIO.patch
 	patches.suse/ACPI-property-Return-type-of-acpi_add_nondev_subnode.patch
 	patches.suse/virtio_net-fix-memory-leak-inside-XPD_TX-with-mergea.patch
+	patches.suse/atm-idt77252-fix-use-after-free-bugs-caused-by-tst_t.patch
 
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
