pinctrl: qcom: msm8916: Allow CAMSS GP clocks to be muxed (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56619,6 +56619,7 @@
 	patches.suse/Revert-scripts-mod-modpost.c-permit-.cranges-secton-.patch
 	patches.suse/kbuild-dummy-tools-avoid-tmpdir-leak-in-dummy-gcc.patch
 	patches.suse/pinctrl-nomadik-Fix-refcount-leak-in-nmk_pinctrl_dt_.patch
+	patches.suse/pinctrl-qcom-msm8916-Allow-CAMSS-GP-clocks-to-be-mux.patch
 
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
