Bluetooth: MGMT: Fixes build warnings with C=1 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56625,6 +56625,7 @@
 	patches.suse/virtio_net-fix-memory-leak-inside-XPD_TX-with-mergea.patch
 	patches.suse/atm-idt77252-fix-use-after-free-bugs-caused-by-tst_t.patch
 	patches.suse/Bluetooth-L2CAP-Fix-l2cap_global_chan_by_psm-regress.patch
+	patches.suse/Bluetooth-MGMT-Fixes-build-warnings-with-C-1.patch
 
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
