--- a/series.conf
+++ b/series.conf
@@ -56626,6 +56626,7 @@
 	patches.suse/atm-idt77252-fix-use-after-free-bugs-caused-by-tst_t.patch
 	patches.suse/Bluetooth-L2CAP-Fix-l2cap_global_chan_by_psm-regress.patch
 	patches.suse/Bluetooth-MGMT-Fixes-build-warnings-with-C-1.patch
+	patches.suse/geneve-fix-TOS-inheriting-for-ipv4.patch
 
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
