--- a/series.conf
+++ b/series.conf
@@ -56616,6 +56616,7 @@
 	patches.suse/remoteproc-qcom-q6v5-mss-add-powerdomains-to-MSM8996.patch
 	patches.suse/x86-speculation-Add-RSB-VM-Exit-protections.patch
 	patches.suse/x86-speculation-Add-LFENCE-to-RSB-fill-sequence.patch
+	patches.suse/Revert-scripts-mod-modpost.c-permit-.cranges-secton-.patch
 
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
