drm/amd/display: Removing assert statements for Linux (bsc#1202366).

--- a/series.conf
+++ b/series.conf
@@ -1239,6 +1239,7 @@
 	patches.suse/0001-drm-client-Look-for-command-line-modes-first.patch
 	patches.suse/0001-drm-client-Don-t-add-new-command-line-mode.patch
 	patches.suse/drm-amd-display-Add-SMU-logging-code.patch
+	patches.suse/drm-amd-display-Removing-assert-statements-for-Linux.patch
 	patches.suse/mm-mprotect-fix-soft-dirty-check-in-can_change_pte_w.patch
 	patches.suse/tools-build-Add-feature-test-for-init_disassemble_in.patch
 	patches.suse/tools-build-Don-t-display-disassembler-four-args-fea.patch
