--- a/series.conf
+++ b/series.conf
@@ -1238,6 +1238,7 @@
 	patches.suse/0001-drm-Always-warn-if-user-defined-modes-are-not-suppor.patch
 	patches.suse/0001-drm-client-Look-for-command-line-modes-first.patch
 	patches.suse/0001-drm-client-Don-t-add-new-command-line-mode.patch
+	patches.suse/drm-amd-display-Add-SMU-logging-code.patch
 	patches.suse/mm-mprotect-fix-soft-dirty-check-in-can_change_pte_w.patch
 	patches.suse/tools-build-Add-feature-test-for-init_disassemble_in.patch
 	patches.suse/tools-build-Don-t-display-disassembler-four-args-fea.patch
