--- a/series.conf
+++ b/series.conf
@@ -13155,6 +13155,7 @@
 	patches.suse/can-pch_can-pch_can_error-initialize-errc-before-usi.patch
 	patches.suse/Bluetooth-btusb-Add-support-of-IMC-Networks-PID-0x35.patch
 	patches.suse/Bluetooth-hci_intel-Add-check-for-platform_driver_re.patch
+	patches.suse/dt-bindings-bluetooth-broadcom-Add-BCM4349B1-DT-bind.patch
 	patches.suse/Bluetooth-hci_bcm-Add-BCM4349B1-variant.patch
 	patches.suse/Bluetooth-btusb-Add-Realtek-RTL8852C-support-ID-0x04.patch
 	patches.suse/Bluetooth-btusb-Add-Realtek-RTL8852C-support-ID-0x04-893fa8bc9952.patch
