--- a/series.conf
+++ b/series.conf
@@ -13563,6 +13563,7 @@
 	patches.suse/devlink-Fix-use-after-free-after-a-failed-reload.patch
 	patches.suse/drm-shmem-helper-Add-missing-vunmap-on-error.patch
 	patches.suse/drm-gem-Properly-annotate-WW-context-on-drm_gem_lock.patch
+	patches.suse/ALSA-usb-audio-More-comprehensive-mixer-map-for-ASUS.patch
 
 	########################################################
 	# end of sorted patches
