drm/shmem-helper: Add missing vunmap on error (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13561,6 +13561,7 @@
 	patches.suse/vsock-Fix-memory-leak-in-vsock_connect.patch
 	patches.suse/vsock-Set-socket-state-back-to-SS_UNCONNECTED-in-vso.patch
 	patches.suse/devlink-Fix-use-after-free-after-a-failed-reload.patch
+	patches.suse/drm-shmem-helper-Add-missing-vunmap-on-error.patch
 
 	########################################################
 	# end of sorted patches
