--- a/series.conf
+++ b/series.conf
@@ -13567,6 +13567,7 @@
 	patches.suse/ALSA-hda-conexant-Add-quirk-for-LENOVO-20149-Noteboo.patch
 	patches.suse/ALSA-usb-audio-More-comprehensive-mixer-map-for-ASUS.patch
 	patches.suse/ALSA-hda-realtek-Add-a-quirk-for-HP-OMEN-15-8786-mut.patch
+	patches.suse/ALSA-hda-cirrus-support-for-iMac-12-1-model.patch
 
 	########################################################
 	# end of sorted patches
