--- a/series.conf
+++ b/series.conf
@@ -13566,6 +13566,7 @@
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-another-Asus-K42JZ-mo.patch
 	patches.suse/ALSA-hda-conexant-Add-quirk-for-LENOVO-20149-Noteboo.patch
 	patches.suse/ALSA-usb-audio-More-comprehensive-mixer-map-for-ASUS.patch
+	patches.suse/ALSA-hda-realtek-Add-a-quirk-for-HP-OMEN-15-8786-mut.patch
 
 	########################################################
 	# end of sorted patches
