--- a/series.conf
+++ b/series.conf
@@ -56633,6 +56633,7 @@
 	patches.suse/vsock-Set-socket-state-back-to-SS_UNCONNECTED-in-vso.patch
 	patches.suse/devlink-Fix-use-after-free-after-a-failed-reload.patch
 	patches.suse/drm-gem-Properly-annotate-WW-context-on-drm_gem_lock.patch
+	patches.suse/ALSA-hda-realtek-Add-quirk-for-another-Asus-K42JZ-mo.patch
 
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
