ALSA: hda/conexant: Add quirk for LENOVO 20149 Notebook model (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56634,6 +56634,7 @@
 	patches.suse/devlink-Fix-use-after-free-after-a-failed-reload.patch
 	patches.suse/drm-gem-Properly-annotate-WW-context-on-drm_gem_lock.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-another-Asus-K42JZ-mo.patch
+	patches.suse/ALSA-hda-conexant-Add-quirk-for-LENOVO-20149-Noteboo.patch
 
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
