--- a/series.conf
+++ b/series.conf
@@ -56636,6 +56636,7 @@
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-another-Asus-K42JZ-mo.patch
 	patches.suse/ALSA-hda-conexant-Add-quirk-for-LENOVO-20149-Noteboo.patch
 	patches.suse/ALSA-usb-audio-More-comprehensive-mixer-map-for-ASUS.patch
+	patches.suse/ALSA-hda-cirrus-support-for-iMac-12-1-model.patch
 
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
