--- a/series.conf
+++ b/series.conf
@@ -56638,6 +56638,7 @@
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-another-Asus-K42JZ-mo.patch
 	patches.suse/ALSA-hda-conexant-Add-quirk-for-LENOVO-20149-Noteboo.patch
 	patches.suse/ALSA-usb-audio-More-comprehensive-mixer-map-for-ASUS.patch
+	patches.suse/ALSA-hda-realtek-Add-a-quirk-for-HP-OMEN-15-8786-mut.patch
 	patches.suse/ALSA-hda-cirrus-support-for-iMac-12-1-model.patch
 
 	# out-of-tree patches
