ALSA: hda/realtek: Fix headset mic for Acer SF313-51 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56334,6 +56334,7 @@
 	patches.suse/ASoC-sgtl5000-Fix-noise-on-shutdown-remove.patch
 	patches.suse/ASoC-Intel-Skylake-Correct-the-ssp-rate-discovery-in.patch
 	patches.suse/ASoC-Intel-Skylake-Correct-the-handling-of-fmt_confi.patch
+	patches.suse/ALSA-hda-realtek-Fix-headset-mic-for-Acer-SF313-51.patch
 	patches.suse/ALSA-hda-conexant-Apply-quirk-for-another-HP-ProDesk.patch
 	patches.suse/ALSA-hda-Add-fixup-for-Dell-Latitidue-E5430.patch
 	patches.suse/ALSA-hda-realtek-Fix-headset-mic-problem-for-a-HP-ma-dbe75d314748.patch
