ALSA: hda/realtek: Add mute LED quirk for HP Omen laptop (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56209,6 +56209,7 @@
 	patches.suse/mm-slub-add-missing-TID-updates-on-slab-deactivation.patch
 	patches.suse/scsi-ibmvfc-Allocate-free-queue-resource-only-during.patch
 	patches.suse/scsi-ibmvfc-Store-vhost-pointer-during-subcrq-alloca.patch
+	patches.suse/ALSA-hda-realtek-Add-mute-LED-quirk-for-HP-Omen-lapt.patch
 	patches.suse/ALSA-hda-realtek-ALC897-headset-MIC-no-sound.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Clevo-PD70PNT.patch
 	patches.suse/ALSA-hda-conexant-Fix-missing-beep-setup.patch
