ALSA: hda/realtek: Add quirk for Dell Latitude 7520 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55738,6 +55738,7 @@
 	patches.suse/serial-8250_mtk-Fix-register-address-for-XON-XOFF-ch.patch
 	patches.suse/slimbus-qcom-Fix-IRQ-check-in-qcom_slim_probe.patch
 	patches.suse/ALSA-hda-fix-unused-Realtek-function-when-PM-is-not-.patch
+	patches.suse/ALSA-hda-realtek-Add-quirk-for-Dell-Latitude-7520.patch
 	patches.suse/ALSA-wavefront-Proper-check-of-get_user-error.patch
 	patches.suse/ALSA-usb-audio-Restore-Rane-SL-1-quirk.patch
 	patches.suse/Fix-double-fget-in-vhost_net_set_backend.patch
