ALSA: hda/realtek: Fix LED on HP ProBook 435 G7 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53925,6 +53925,7 @@
 	patches.suse/powerpc-pseries-ddw-Revert-Extend-upper-limit-for-hu.patch
 	patches.suse/hugetlbfs-flush-TLBs-correctly-after-huge_pmd_unshar.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-ASRock-NUC-Box-1100.patch
+	patches.suse/ALSA-hda-realtek-Fix-LED-on-HP-ProBook-435-G7.patch
 	patches.suse/ASoC-DAPM-Cover-regression-by-kctl-change-notificati.patch
 	patches.suse/ASoC-qdsp6-q6routing-Conditionally-reset-FrontEnd-Mi.patch
 	patches.suse/ASoC-topology-Add-missing-rwsem-around-snd_ctl_remov.patch
