ALSA: hda/realtek: Add quirk for HP Spectre x360 15-eb0xxx (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56598,6 +56598,7 @@
 	patches.suse/scsi-qla2xxx-Fix-sparse-warning-for-dport_data.patch
 	patches.suse/scsi-qla2xxx-Update-manufacturer-details.patch
 	patches.suse/scsi-qla2xxx-Update-version-to-10.02.07.800-k.patch
+	patches.suse/ALSA-hda-realtek-Add-quirk-for-HP-Spectre-x360-15-eb.patch
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
