ALSA: hda/realtek: Add quirk for HP Dev One (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56167,6 +56167,7 @@
 	patches.suse/ASoC-es8328-Fix-event-generation-for-deemphasis-cont.patch
 	patches.suse/ASoC-wm_adsp-Fix-event-generation-for-wm_adsp_fw_put.patch
 	patches.suse/ALSA-hda-realtek-Add-HW8326-support.patch
+	patches.suse/ALSA-hda-realtek-Add-quirk-for-HP-Dev-One.patch
 	patches.suse/ata-libata-core-fix-NULL-pointer-deref-in-ata_host_a.patch
 	patches.suse/ata-libata-transport-fix-dma-pio-xfer-_mode-sysfs-fi.patch
 	patches.suse/SUNRPC-Fix-the-calculation-of-xdr-end-in-xdr_get_nex.patch
