add patch: patches.suse/0001-scripts-check-local-export-use-bin-bash-in.patch

--- a/series.conf
+++ b/series.conf
@@ -122,6 +122,7 @@
 	patches.suse/kernel-add-product-identifying-information-to-kernel-build.patch
 	patches.suse/kernel-add-release-status-to-kernel-build.patch
 	patches.suse/panic-do-not-print-uninitialized-taint_flags.patch
+	patches.suse/0001-scripts-check-local-export-use-bin-bash-in.patch
 
 	# build tweaks for external KMPs
 	patches.suse/s390-export-symbols-for-crash-kmp.patch
