--- a/series.conf
+++ b/series.conf
@@ -13570,6 +13570,7 @@
 	patches.suse/ALSA-hda-realtek-Add-a-quirk-for-HP-OMEN-15-8786-mut.patch
 	patches.suse/ALSA-hda-cirrus-support-for-iMac-12-1-model.patch
 	patches.suse/NTB-ntb_tool-uninitialized-heap-data-in-tool_fn_writ.patch
+	patches.suse/docs-i2c-i2c-sysfs-fix-hyperlinks.patch
 
 	########################################################
 	# end of sorted patches
