--- a/series.conf
+++ b/series.conf
@@ -13569,6 +13569,7 @@
 	patches.suse/ALSA-usb-audio-More-comprehensive-mixer-map-for-ASUS.patch
 	patches.suse/ALSA-hda-realtek-Add-a-quirk-for-HP-OMEN-15-8786-mut.patch
 	patches.suse/ALSA-hda-cirrus-support-for-iMac-12-1-model.patch
+	patches.suse/NTB-ntb_tool-uninitialized-heap-data-in-tool_fn_writ.patch
 
 	########################################################
 	# end of sorted patches
