--- a/series.conf
+++ b/series.conf
@@ -55123,6 +55123,7 @@
 	patches.suse/ALSA-cmipci-Restore-aux-vol-on-suspend-resume.patch
 	patches.suse/ALSA-oss-Fix-PCM-OSS-buffer-allocation-overflow.patch
 	patches.suse/ALSA-spi-Add-check-for-clk_enable.patch
+	patches.suse/ALSA-hda-realtek-fix-right-sounds-and-mute-micmute-L-e6194c8d0653.patch
 	patches.suse/ASoC-topology-Allow-TLV-control-to-be-either-read-or.patch
 	patches.suse/ASoC-topology-Optimize-soc_tplg_dapm_graph_elems_loa.patch
 	patches.suse/ASoC-xilinx-xlnx_formatter_pcm-Handle-sysclk-setting.patch
