ALSA: hda/realtek: Add quirk for Clevo NS50PU (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56224,6 +56224,7 @@
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Clevo-PD70PNT.patch
 	patches.suse/ALSA-hda-conexant-Fix-missing-beep-setup.patch
 	patches.suse/ALSA-hda-via-Fix-missing-beep-setup.patch
+	patches.suse/ALSA-hda-realtek-Add-quirk-for-Clevo-NS50PU.patch
 	patches.suse/phy-aquantia-Fix-AN-when-higher-speeds-than-1G-are-n.patch
 	patches.suse/virtio_net-fix-xdp_rxq_info-bug-after-suspend-resume.patch
 	patches.suse/ata-libata-add-qc-flags-in-ata_qc_complete_template-.patch
