ALSA: hda/realtek: Add quirk for Clevo NP50PNJ (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55117,6 +55117,7 @@
 	patches.suse/ivtv-fix-incorrect-device_caps-for-ivtvfb.patch
 	patches.suse/ALSA-firewire-lib-fix-uninitialized-flag-for-AV-C-de.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Clevo-NP70PNJ.patch
+	patches.suse/ALSA-hda-realtek-Add-quirk-for-Clevo-NP50PNJ.patch
 	patches.suse/ASoC-codecs-wcd934x-fix-return-value-of-wcd934x_rx_h.patch
 	patches.suse/ALSA-hda-realtek-Fix-headset-mic-problem-for-a-HP-ma.patch
 	patches.suse/ALSA-usb-audio-Add-mute-TLV-for-playback-volumes-on-.patch
