--- a/series.conf
+++ b/series.conf
@@ -55592,6 +55592,7 @@
 	patches.suse/ASoC-msm8916-wcd-digital-Check-failure-for-devm_snd_.patch
 	patches.suse/ASoC-codecs-wcd934x-do-not-switch-off-SIDO-Buck-when.patch
 	patches.suse/ALSA-usb-audio-Clear-MIDI-port-active-flag-after-dra.patch
+	patches.suse/ALSA-hda-realtek-Add-quirk-for-Clevo-NP70PNP.patch
 	patches.suse/cifs-Use-kzalloc-instead-of-kmalloc-memset.patch
 	patches.suse/cifs-fix-NULL-ptr-dereference-in-refresh_mounts-.patch
 	patches.suse/cifs-use-correct-lock-type-in-cifs_reconnect-.patch
