--- a/series.conf
+++ b/series.conf
@@ -55746,6 +55746,7 @@
 	patches.suse/ALSA-hda-fix-unused-Realtek-function-when-PM-is-not-.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Dell-Latitude-7520.patch
 	patches.suse/ALSA-wavefront-Proper-check-of-get_user-error.patch
+	patches.suse/ALSA-hda-realtek-Add-quirk-for-the-Framework-Laptop.patch
 	patches.suse/ALSA-usb-audio-Restore-Rane-SL-1-quirk.patch
 	patches.suse/Fix-double-fget-in-vhost_net_set_backend.patch
 	patches.suse/NFC-nci-fix-sleep-in-atomic-context-bugs-caused-by-n.patch
