ALSA: hda/realtek: Fix deadlock by COEF mutex (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54861,6 +54861,7 @@
 	patches.suse/cifs-fix-confusing-unneeded-warning-message-on-smb2-1-and-earlier.patch
 	patches.suse/ALSA-hda-Fix-regression-on-forced-probe-mask-option.patch
 	patches.suse/ALSA-hda-Fix-missing-codec-probe-on-Shenker-Dock-15.patch
+	patches.suse/ALSA-hda-realtek-Fix-deadlock-by-COEF-mutex.patch
 	patches.suse/ASoC-ops-Fix-stereo-change-notifications-in-snd_soc_.patch
 	patches.suse/ASoC-ops-Fix-stereo-change-notifications-in-snd_soc_-650204ded370.patch
 	patches.suse/ASoC-Revert-ASoC-mediatek-Check-for-error-clk-pointe.patch
