--- a/series.conf
+++ b/series.conf
@@ -54736,6 +54736,7 @@
 	patches.suse/dma-buf-heaps-Fix-potential-spectre-v1-gadget.patch
 	patches.suse/drm-i915-overlay-Prevent-divide-by-zero-bugs-in-scal.patch
 	patches.suse/ALSA-usb-audio-initialize-variables-that-could-ignor.patch
+	patches.suse/ALSA-hda-realtek-Fix-race-at-concurrent-COEF-updates.patch
 	patches.suse/ALSA-hda-realtek-Add-missing-fixup-model-entry-for-G.patch
 	patches.suse/ALSA-hda-realtek-Fix-silent-output-on-Gigabyte-X570S.patch
 	patches.suse/ALSA-hda-realtek-Fix-silent-output-on-Gigabyte-X570--ea3541961376.patch
