ALSA: hda/realtek: Add new alc285-hp-amp-init model (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54185,6 +54185,7 @@
 	patches.suse/ALSA-drivers-opl3-Fix-incorrect-use-of-vp-state.patch
 	patches.suse/ALSA-jack-Check-the-return-value-of-kstrdup.patch
 	patches.suse/ALSA-hda-realtek-Amp-init-fixup-for-HP-ZBook-15-G6.patch
+	patches.suse/ALSA-hda-realtek-Add-new-alc285-hp-amp-init-model.patch
 	patches.suse/ALSA-hda-realtek-fix-mute-micmute-LEDs-for-a-HP-ProB.patch
 	patches.suse/ASoC-meson-aiu-fifo-Add-missing-dma_coerce_mask_and_.patch
 	patches.suse/ASoC-meson-aiu-Move-AIU_I2S_MISC-hold-setting-to-aiu.patch
