net: davinci_emac: Fix incorrect masking of tx and rx error channel (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -50460,6 +50460,7 @@
 	patches.suse/net-xdp-Update-pkt_type-if-generic-XDP-changes-unica.patch
 	patches.suse/msft-hv-2342-hv_netvsc-Make-netvsc-VF-binding-check-both-MAC-and-.patch
 	patches.suse/vsock-vmci-log-once-the-failed-queue-pair-allocation.patch
+	patches.suse/net-davinci_emac-Fix-incorrect-masking-of-tx-and-rx-.patch
 	patches.suse/iwlwifi-Fix-softirq-hardirq-disabling-in-iwl_pcie_ge.patch
 	patches.suse/nfp-devlink-initialize-the-devlink-port-attribute-la.patch
 	patches.suse/net-phy-intel-xway-enable-integrated-led-functions.patch
