--- a/series.conf
+++ b/series.conf
@@ -50835,6 +50835,7 @@
 	patches.suse/serial-max310x-unregister-uart-driver-in-case-of-fai.patch
 	patches.suse/Revert-rtlwifi-fix-a-potential-NULL-pointer-derefere.patch
 	patches.suse/net-rtlwifi-properly-check-for-alloc_workqueue-failu.patch
+	patches.suse/Revert-net-fujitsu-fix-a-potential-NULL-pointer-dere.patch
 	patches.suse/Revert-qlcnic-Avoid-potential-NULL-pointer-dereferen.patch
 	patches.suse/Revert-gdrom-fix-a-memory-leak-bug.patch
 	patches.suse/cdrom-gdrom-deallocate-struct-gdrom_unit-fields-in-r.patch
