Revert "net: stmicro: fix a missing check of clk_prepare" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -50836,6 +50836,7 @@
 	patches.suse/Revert-rtlwifi-fix-a-potential-NULL-pointer-derefere.patch
 	patches.suse/net-rtlwifi-properly-check-for-alloc_workqueue-failu.patch
 	patches.suse/Revert-net-fujitsu-fix-a-potential-NULL-pointer-dere.patch
+	patches.suse/Revert-net-stmicro-fix-a-missing-check-of-clk_prepar.patch
 	patches.suse/Revert-qlcnic-Avoid-potential-NULL-pointer-dereferen.patch
 	patches.suse/Revert-gdrom-fix-a-memory-leak-bug.patch
 	patches.suse/cdrom-gdrom-deallocate-struct-gdrom_unit-fields-in-r.patch
