--- a/series.conf
+++ b/series.conf
@@ -50837,6 +50837,7 @@
 	patches.suse/net-rtlwifi-properly-check-for-alloc_workqueue-failu.patch
 	patches.suse/Revert-net-fujitsu-fix-a-potential-NULL-pointer-dere.patch
 	patches.suse/Revert-net-stmicro-fix-a-missing-check-of-clk_prepar.patch
+	patches.suse/net-stmicro-handle-clk_prepare-failure-during-init.patch
 	patches.suse/Revert-qlcnic-Avoid-potential-NULL-pointer-dereferen.patch
 	patches.suse/Revert-gdrom-fix-a-memory-leak-bug.patch
 	patches.suse/cdrom-gdrom-deallocate-struct-gdrom_unit-fields-in-r.patch
