--- a/series.conf
+++ b/series.conf
@@ -50839,6 +50839,7 @@
 	patches.suse/Revert-net-stmicro-fix-a-missing-check-of-clk_prepar.patch
 	patches.suse/net-stmicro-handle-clk_prepare-failure-during-init.patch
 	patches.suse/Revert-niu-fix-missing-checks-of-niu_pci_eeprom_read.patch
+	patches.suse/ethernet-sun-niu-fix-missing-checks-of-niu_pci_eepro.patch
 	patches.suse/Revert-qlcnic-Avoid-potential-NULL-pointer-dereferen.patch
 	patches.suse/Revert-gdrom-fix-a-memory-leak-bug.patch
 	patches.suse/cdrom-gdrom-deallocate-struct-gdrom_unit-fields-in-r.patch
