qlcnic: Add null check after calling netdev_alloc_skb (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -50841,6 +50841,7 @@
 	patches.suse/Revert-niu-fix-missing-checks-of-niu_pci_eeprom_read.patch
 	patches.suse/ethernet-sun-niu-fix-missing-checks-of-niu_pci_eepro.patch
 	patches.suse/Revert-qlcnic-Avoid-potential-NULL-pointer-dereferen.patch
+	patches.suse/qlcnic-Add-null-check-after-calling-netdev_alloc_skb.patch
 	patches.suse/Revert-gdrom-fix-a-memory-leak-bug.patch
 	patches.suse/cdrom-gdrom-deallocate-struct-gdrom_unit-fields-in-r.patch
 	patches.suse/Revert-char-hpet-fix-a-missing-check-of-ioremap.patch
