net: netcp: Fix an error message (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -50939,6 +50939,7 @@
 	patches.suse/spi-spi-fsl-dspi-Fix-a-resource-leak-in-an-error-han.patch
 	patches.suse/spi-sprd-Add-missing-MODULE_DEVICE_TABLE.patch
 	patches.suse/net-nfc-rawsock.c-fix-a-permission-check-bug.patch
+	patches.suse/net-netcp-Fix-an-error-message.patch
 	patches.suse/net-mlx4-Fix-EEPROM-dump-support.patch
 	patches.suse/mac80211-assure-all-fragments-are-encrypted.patch
 	patches.suse/mac80211-prevent-mixed-key-and-fragment-cache-attack.patch
