--- a/series.conf
+++ b/series.conf
@@ -50962,6 +50962,7 @@
 	patches.suse/bpf-Prevent-writable-memory-mapping-of-read-only-rin.patch
 	patches.suse/bpf-kconfig-Add-consolidated-menu-entry-for-bpf-with.patch
 	patches.suse/bpf-Add-kconfig-knob-for-disabling-unpriv-bpf-by-def.patch
+	patches.suse/net-fec-fix-the-potential-memory-leak-in-fec_enet_in.patch
 	patches.suse/chelsio-chtls-unlock-on-error-in-chtls_pt_recvmsg.patch
 	patches.suse/cxgb4-ch_ktls-Clear-resources-when-pf4-device-is-rem.patch
 	patches.suse/netfilter-nft_set_pipapo_avx2-Add-irq_fpu_usable-che.patch
