net: lantiq: fix memory corruption in RX ring (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -50989,6 +50989,7 @@
 	patches.suse/cxgb4-avoid-accessing-registers-when-clearing-filter.patch
 	patches.suse/net-hso-bail-out-on-interrupt-URB-allocation-failure.patch
 	patches.suse/ixgbe-fix-large-MTU-request-from-VF.patch
+	patches.suse/net-lantiq-fix-memory-corruption-in-RX-ring.patch
 	patches.suse/net-sched-fq_pie-re-factor-fix-for-fq_pie-endless-lo.patch
 	patches.suse/net-sched-fq_pie-fix-OOB-access-in-the-traffic-path.patch
 	patches.suse/net-hso-fix-control-request-directions.patch
