--- a/series.conf
+++ b/series.conf
@@ -50992,6 +50992,7 @@
 	patches.suse/net-lantiq-fix-memory-corruption-in-RX-ring.patch
 	patches.suse/net-sched-fq_pie-re-factor-fix-for-fq_pie-endless-lo.patch
 	patches.suse/net-sched-fq_pie-fix-OOB-access-in-the-traffic-path.patch
+	patches.suse/net-dsa-mt7530-fix-VLAN-traffic-leaks.patch
 	patches.suse/net-hso-fix-control-request-directions.patch
 	patches.suse/net-usb-fix-memory-leak-in-smsc75xx_bind.patch
 	patches.suse/net-zero-initialize-tc-skb-extension-on-allocation.patch
