net: hns: Fix kernel-doc (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -50995,6 +50995,7 @@
 	patches.suse/net-dsa-mt7530-fix-VLAN-traffic-leaks.patch
 	patches.suse/net-hso-fix-control-request-directions.patch
 	patches.suse/net-usb-fix-memory-leak-in-smsc75xx_bind.patch
+	patches.suse/net-hns-Fix-kernel-doc.patch
 	patches.suse/net-zero-initialize-tc-skb-extension-on-allocation.patch
 	patches.suse/bpf-Fix-BPF_JIT-kconfig-symbol-dependency.patch
 	patches.suse/bpftool-Add-sock_release-help-info-for-cgroup-attach.patch
