net/mlx5e: Check for needed capability for cvlan matching (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -51126,6 +51126,7 @@
 	patches.suse/netfilter-nf_tables-missing-error-reporting-for-not-.patch
 	patches.suse/nfc-fix-NULL-ptr-dereference-in-llcp_sock_getname-af.patch
 	patches.suse/net-mlx5e-Fix-incompatible-casting.patch
+	patches.suse/net-mlx5e-Check-for-needed-capability-for-cvlan-matc.patch
 	patches.suse/net-mlx5-DR-Create-multi-destination-flow-table-with.patch
 	patches.suse/cxgb4-fix-regression-with-HASH-tc-prio-value-update.patch
 	patches.suse/net-x25-Return-the-correct-errno-code.patch
