ixgbevf: add correct exception tracing for XDP (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -51128,6 +51128,7 @@
 	patches.suse/net-mlx5e-Fix-incompatible-casting.patch
 	patches.suse/net-mlx5e-Check-for-needed-capability-for-cvlan-matc.patch
 	patches.suse/net-mlx5-DR-Create-multi-destination-flow-table-with.patch
+	patches.suse/ixgbevf-add-correct-exception-tracing-for-XDP.patch
 	patches.suse/cxgb4-fix-regression-with-HASH-tc-prio-value-update.patch
 	patches.suse/net-x25-Return-the-correct-errno-code.patch
 	patches.suse/ieee802154-fix-error-return-code-in-ieee802154_add_i.patch
