ice: report supported and advertised autoneg using PHY capabilities (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -51148,6 +51148,7 @@
 	patches.suse/ice-Fix-allowing-VF-to-request-more-less-queues-via-.patch
 	patches.suse/ice-Fix-VFR-issues-for-AVF-drivers-that-expect-ATQLE.patch
 	patches.suse/ice-handle-the-VF-VSI-rebuild-failure.patch
+	patches.suse/ice-report-supported-and-advertised-autoneg-using-PH.patch
 	patches.suse/ice-Allow-all-LLDP-packets-from-PF-to-Tx.patch
 	patches.suse/cxgb4-avoid-link-re-train-during-TC-MQPRIO-configura.patch
 	patches.suse/pid-take-a-reference-when-initializing-cad_pid.patch
