--- a/series.conf
+++ b/series.conf
@@ -51289,6 +51289,7 @@
 	patches.suse/cxgb4-fix-endianness-when-flashing-boot-image.patch
 	patches.suse/cxgb4-fix-sleep-in-atomic-when-flashing-PHY-firmware.patch
 	patches.suse/cxgb4-halt-chip-before-flashing-PHY-firmware-image.patch
+	patches.suse/net-stmmac-dwmac1000-Fix-extended-MAC-address-regist.patch
 	patches.suse/ethtool-strset-fix-message-length-calculation.patch
 	patches.suse/qlcnic-Fix-an-error-handling-path-in-qlcnic_probe.patch
 	patches.suse/netxen_nic-Fix-an-error-handling-path-in-netxen_nic_.patch
