net: stmmac: disable clocks in stmmac_remove_config_dt() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -51299,6 +51299,7 @@
 	patches.suse/bpf-Inherit-expanded-patched-seen-count-from-old-aux.patch
 	patches.suse/bpf-Do-not-mark-insn-as-seen-under-speculative-path-.patch
 	patches.suse/bpf-Fix-leakage-under-speculation-on-mispredicted-br.patch
+	patches.suse/net-stmmac-disable-clocks-in-stmmac_remove_config_dt.patch
 	patches.suse/net-usb-fix-possible-use-after-free-in-smsc75xx_bind.patch
 	patches.suse/net-fec_ptp-fix-issue-caused-by-refactor-the-fec_dev.patch
 	patches.suse/can-bcm-fix-infoleak-in-struct-bcm_msg_head.patch
