--- a/series.conf
+++ b/series.conf
@@ -51301,6 +51301,7 @@
 	patches.suse/bpf-Fix-leakage-under-speculation-on-mispredicted-br.patch
 	patches.suse/net-stmmac-disable-clocks-in-stmmac_remove_config_dt.patch
 	patches.suse/net-usb-fix-possible-use-after-free-in-smsc75xx_bind.patch
+	patches.suse/net-fec_ptp-add-clock-rate-zero-check.patch
 	patches.suse/net-fec_ptp-fix-issue-caused-by-refactor-the-fec_dev.patch
 	patches.suse/can-bcm-fix-infoleak-in-struct-bcm_msg_head.patch
 	patches.suse/can-mcba_usb-fix-memory-leak-in-mcba_usb.patch
