--- a/series.conf
+++ b/series.conf
@@ -51321,6 +51321,7 @@
 	patches.suse/cfg80211-make-certificate-generation-more-robust.patch
 	patches.suse/cfg80211-avoid-double-free-of-PMSR-request.patch
 	patches.suse/mac80211-reset-profile_periodicity-ema_ap.patch
+	patches.suse/net-ethernet-fix-potential-use-after-free-in-ec_bhf_.patch
 	patches.suse/s390-mcck-fix-invalid-KVM-guest-condition-check
 	patches.suse/s390-sles15sp2-zcrypt-fix-hanging-ioctl-caused-by-wrong-msg-counter.patch
 	patches.suse/powerpc-perf-Fix-crash-in-perf_instruction_pointer-w.patch
