--- a/series.conf
+++ b/series.conf
@@ -51533,6 +51533,7 @@
 	patches.suse/nvmet-use-NVMET_MAX_NAMESPACES-to-set-nn-value.patch
 	patches.suse/qemu_fw_cfg-Make-fw_cfg_rev_attr-a-proper-kobj_attri.patch
 	patches.suse/net-mvpp2-Put-fwnode-in-error-case-during-probe.patch
+	patches.suse/net-pch_gbe-Propagate-error-from-devm_gpio_request_o.patch
 	patches.suse/mvpp2-suppress-warning.patch
 	patches.suse/mISDN-fix-possible-use-after-free-in-HFC_cleanup.patch
 	patches.suse/msft-hv-2344-net-mana-Use-struct_size-in-kzalloc.patch
