--- a/series.conf
+++ b/series.conf
@@ -51541,6 +51541,7 @@
 	patches.suse/net-xilinx_emaclite-Do-not-print-real-IOMEM-pointer.patch
 	patches.suse/e100-handle-eeprom-as-little-endian.patch
 	patches.suse/can-hi311x-hi3110_can_probe-silence-clang-warning.patch
+	patches.suse/ehea-fix-error-return-code-in-ehea_restart_qps.patch
 	patches.suse/ipv6-use-prandom_u32-for-ID-generation.patch
 	patches.suse/mlx5-count-all-link-events.patch
 	patches.suse/ice-Re-organizes-reqstd-avail-R-T-XQ-check-code-for-.patch
