net: moxa: Use devm_platform_get_and_ioremap_resource() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -51545,6 +51545,7 @@
 	patches.suse/ipv6-use-prandom_u32-for-ID-generation.patch
 	patches.suse/mlx5-count-all-link-events.patch
 	patches.suse/ice-Re-organizes-reqstd-avail-R-T-XQ-check-code-for-.patch
+	patches.suse/net-moxa-Use-devm_platform_get_and_ioremap_resource.patch
 	patches.suse/net-phy-realtek-add-delay-to-fix-RXC-generation-issu.patch
 	patches.suse/ibmvnic-Use-list_for_each_entry-to-simplify-code-in-.patch
 	patches.suse/ibmvnic-Allow-device-probe-if-the-device-is-not-read.patch
