perf bench: Share some global variables to fix build with gcc 10 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -22846,6 +22846,7 @@
 	patches.suse/efi-Add-a-sanity-check-to-efivar_store_raw.patch
 	patches.suse/x86-mce-fix-logic-and-comments-around-msr_ppin_ctl.patch
 	patches.suse/sys-sysinfo-Respect-boottime-inside-time-namespace.patch
+	patches.suse/perf-bench-Share-some-global-variables-to-fix-build-.patch
 	patches.suse/perf-amd-uncore-replace-manual-sampling-check-with-cap_no_interrupt-flag.patch
 	patches.suse/x86-ioremap-map-efi-runtime-services-data-as-encrypted-for-sev
 	patches.suse/x86-vector-Remove-warning-on-managed-interrupt-migration.patch
