net: bcmgenet: Add mdio-bcm-unimac soft dependency (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -51591,6 +51591,7 @@
 	patches.suse/gve-DQO-Add-TX-path.patch
 	patches.suse/gve-DQO-Add-RX-path.patch
 	patches.suse/gve-Fix-warnings-reported-for-DQO-patchset.patch
+	patches.suse/net-bcmgenet-Add-mdio-bcm-unimac-soft-dependency.patch
 	patches.suse/mt76-mt7615-fix-fixed-rate-tx-status-reporting.patch
 	patches.suse/mt76-fix-possible-NULL-pointer-dereference-in-mt76_t.patch
 	patches.suse/mt76-mt7915-fix-IEEE80211_HE_PHY_CAP7_MAX_NC-for-sta.patch
