--- a/series.conf
+++ b/series.conf
@@ -51628,6 +51628,7 @@
 	patches.suse/Bluetooth-Fix-handling-of-HCI_LE_Advertising_Set_Ter.patch
 	patches.suse/gve-DQO-Fix-off-by-one-in-gve_rx_dqo.patch
 	patches.suse/net-ethernet-aeroflex-fix-UAF-in-greth_of_remove.patch
+	patches.suse/net-ethernet-ezchip-fix-UAF-in-nps_enet_remove.patch
 	patches.suse/net-sched-add-barrier-to-ensure-correct-ordering-for.patch
 	patches.suse/msft-hv-2398-hv_netvsc-Set-needed_headroom-according-to-VF.patch
 	patches.suse/can-bcm-delay-release-of-struct-bcm_op-after-synchro.patch
