net: ethernet: ezchip: remove redundant check (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -51629,6 +51629,7 @@
 	patches.suse/gve-DQO-Fix-off-by-one-in-gve_rx_dqo.patch
 	patches.suse/net-ethernet-aeroflex-fix-UAF-in-greth_of_remove.patch
 	patches.suse/net-ethernet-ezchip-fix-UAF-in-nps_enet_remove.patch
+	patches.suse/net-ethernet-ezchip-remove-redundant-check.patch
 	patches.suse/net-sched-add-barrier-to-ensure-correct-ordering-for.patch
 	patches.suse/msft-hv-2398-hv_netvsc-Set-needed_headroom-according-to-VF.patch
 	patches.suse/can-bcm-delay-release-of-struct-bcm_op-after-synchro.patch
