--- a/series.conf
+++ b/series.conf
@@ -51630,6 +51630,7 @@
 	patches.suse/net-ethernet-aeroflex-fix-UAF-in-greth_of_remove.patch
 	patches.suse/net-ethernet-ezchip-fix-UAF-in-nps_enet_remove.patch
 	patches.suse/net-ethernet-ezchip-remove-redundant-check.patch
+	patches.suse/net-ethernet-ezchip-fix-error-handling.patch
 	patches.suse/net-sched-add-barrier-to-ensure-correct-ordering-for.patch
 	patches.suse/msft-hv-2398-hv_netvsc-Set-needed_headroom-according-to-VF.patch
 	patches.suse/can-bcm-delay-release-of-struct-bcm_op-after-synchro.patch
