--- a/series.conf
+++ b/series.conf
@@ -7001,6 +7001,7 @@
 	patches.suse/clk-ast2600-Fix-soc-revision-for-AHB.patch
 	patches.suse/clk-qcom-gcc-msm8996-Drop-again-gcc_aggre1_pnoc_ahb_.patch
 	patches.suse/tools-headers-UAPI-Sync-linux-prctl.h-with-the-kernel-sources
+	patches.suse/perf-bench-futex-Fix-memory-leak-of-perf_cpu_map__ne.patch
 	patches.suse/x86-fpu-optimize-out-sigframe-xfeatures-when-in-init-state.patch
 	patches.suse/x86-mce-Add-errata-workaround-for-Skylake-SKX37.patch
 	patches.suse/perf-x86-vlbr-Add-c-flags-to-vlbr-event-constraints.patch
