locking/lockdep: Avoid potential access of invalid memory in lock_class (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55078,6 +55078,7 @@
 	patches.suse/cifs-use-a-different-reconnect-helper-for-non-cifsd-threads.patch
 	patches.suse/NFSD-prevent-underflow-in-nfssvc_decode_writeargs.patch
 	patches.suse/NFSD-prevent-integer-overflow-on-32-bit-systems.patch
+	patches.suse/locking-lockdep-Avoid-potential-access-of-invalid-me.patch
 	patches.suse/sched-debug-Remove-mpol_get-put-and-task_lock-unlock.patch
 	patches.suse/vsprintf-Fix-pK-with-kptr_restrict-0.patch
 	patches.suse/printk-Add-panic_in_progress-helper.patch
