--- a/series.conf
+++ b/series.conf
@@ -54718,6 +54718,7 @@
 	patches.suse/cgroup-v1-Require-capabilities-to-set-release_agent.patch
 	patches.suse/cgroup-cpuset-Fix-suspicious-RCU-usage-lockdep-warning.patch
 	patches.suse/Revert-module-async-async_synchronize_full-on-module.patch
+	patches.suse/selftests-futex-Use-variable-MAKE-instead-of-make.patch
 	patches.suse/ax25-improve-the-incomplete-fix-to-avoid-UAF-and-NPD.patch
 	patches.suse/ax25-add-refcount-in-ax25_dev-to-avoid-UAF-bugs.patch
 	patches.suse/gve-fix-the-wrong-AdminQ-buffer-queue-index-check.patch
