net: cpsw: add missing of_node_put() in cpsw_probe_dt() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55730,6 +55730,7 @@
 	patches.suse/can-grcan-grcan_close-fix-deadlock.patch
 	patches.suse/can-grcan-use-ofdev-dev-when-allocating-DMA-memory.patch
 	patches.suse/hinic-fix-bug-of-wq-out-of-bound-access.patch
+	patches.suse/net-cpsw-add-missing-of_node_put-in-cpsw_probe_dt.patch
 	patches.suse/nfc-replace-improper-check-device_is_registered-in-n.patch
 	patches.suse/nfc-nfcmrvl-main-reorder-destructive-operations-in-n.patch
 	patches.suse/smsc911x-allow-using-IRQ0.patch
