--- a/series.conf
+++ b/series.conf
@@ -54463,6 +54463,7 @@
 	patches.suse/regmap-Call-regmap_debugfs_exit-prior-to-_init.patch
 	patches.suse/regulator-qcom_smd-Align-probe-function-with-rpmh-re.patch
 	patches.suse/spi-spi-rspi-Drop-redeclaring-ret-variable-in-qspi_t.patch
+	patches.suse/spi-Fix-incorrect-cs_setup-delay-handling.patch
 	patches.suse/spi-spi-meson-spifc-Add-missing-pm_runtime_disable-i.patch
 	patches.suse/mfd-intel-lpss-Fix-too-early-PM-enablement-in-the-AC.patch
 	patches.suse/backlight-qcom-wled-Validate-enabled-string-indices-.patch
