--- a/series.conf
+++ b/series.conf
@@ -53557,6 +53557,7 @@
 	patches.suse/net-delete-redundant-function-declaration.patch
 	patches.suse/msft-hv-2454-hv_netvsc-Add-comment-of-netvsc_xdp_xmit.patch
 	patches.suse/ipvs-add-sysctl_run_estimation-to-support-disable-es.patch
+	patches.suse/net-enetc-unmap-DMA-in-enetc_send_cmd.patch
 	patches.suse/b43legacy-fix-a-lower-bounds-test.patch
 	patches.suse/b43-fix-a-lower-bounds-test.patch
 	patches.suse/mwifiex-Read-a-PCI-register-after-writing-the-TX-rin.patch
