arm64: signal: nofpsimd: Do not allocate fp/simd context when not available (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55076,6 +55076,7 @@
 	patches.suse/KEYS-fix-length-validation-in-keyctl_pkey_params_get.patch
 	patches.suse/arm64-module-remove-NOLOAD-from-linker-script.patch
 	patches.suse/arm64-mm-avoid-fixmap-race-condition-when-create-pud-mapping.patch
+	patches.suse/arm64-signal-nofpsimd-Do-not-allocate-fp-simd-contex.patch
 	patches.suse/clocksource-drivers-timer-of-Check-return-value-of-o.patch
 	patches.suse/ACPICA-Avoid-walking-the-ACPI-Namespace-if-it-is-not.patch
 	patches.suse/ACPI-properties-Consistently-return-ENOENT-if-there-.patch
