net: enetc: report software timestamping via SO_TIMESTAMPING (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55466,6 +55466,7 @@
 	patches.suse/xen-fix-is_xen_pmu.patch
 	patches.suse/livepatch-Don-t-block-removal-of-patches-that-are-safe-to-unload.patch
 	patches.suse/net-usb-ax88179_178a-add-Allied-Telesis-AT-UMCs.patch
+	patches.suse/net-enetc-report-software-timestamping-via-SO_TIMEST.patch
 	patches.suse/net-hns3-fix-bug-when-PF-set-the-duplicate-MAC-addre.patch
 	patches.suse/net-phy-broadcom-Fix-brcm_fet_config_init.patch
 	patches.suse/net-x25-Fix-null-ptr-deref-caused-by-x25_disconnect.patch
