--- a/series.conf
+++ b/series.conf
@@ -53838,6 +53838,7 @@
 	patches.suse/msft-hv-2477-net-mana-Fix-spelling-mistake-calledd-called.patch
 	patches.suse/net-hns3-fix-kernel-crash-when-unload-VF-while-it-is.patch
 	patches.suse/net-hns3-remove-check-VF-uc-mac-exist-when-set-by-PF.patch
+	patches.suse/net-ethernet-ti-cpsw_ale-Fix-access-to-un-initialize.patch
 	patches.suse/gve-fix-unmatched-u64_stats_update_end.patch
 	patches.suse/cxgb4-fix-eeprom-len-when-diagnostics-not-implemente.patch
 	patches.suse/ring-buffer-Protect-ring_buffer_reset-from-reentrancy.patch
