--- a/series.conf
+++ b/series.conf
@@ -55240,6 +55240,7 @@
 	patches.suse/msft-hv-2523-net-mana-Add-handling-of-CQE_RX_TRUNCATED.patch
 	patches.suse/msft-hv-2524-net-mana-Remove-unnecessary-check-of-cqe_type-in-man.patch
 	patches.suse/net-asix-add-proper-error-handling-of-usb-read-error.patch
+	patches.suse/net-enetc-allocate-CBD-ring-data-memory-using-DMA-co.patch
 	patches.suse/ath10k-fix-memory-overwrite-of-the-WoWLAN-wakeup-pac.patch
 	patches.suse/ath5k-fix-OOB-in-ath5k_eeprom_read_pcal_info_5111.patch
 	patches.suse/ath9k_htc-fix-uninit-value-bugs.patch
