--- a/series.conf
+++ b/series.conf
@@ -54008,6 +54008,7 @@
 	patches.suse/igb-fix-netpoll-exit-with-traffic.patch
 	patches.suse/mdio-aspeed-Fix-Link-is-Down-issue.patch
 	patches.suse/net-sched-sch_ets-don-t-peek-at-classes-beyond-nband.patch
+	patches.suse/net-mscc-ocelot-don-t-downgrade-timestamping-RX-filt.patch
 	patches.suse/NFSv42-Don-t-fail-clone-unless-the-OP_CLONE-operatio.patch
 	patches.suse/NFSv42-Fix-pagecache-invalidation-after-COPY-CLONE.patch
 	patches.suse/scsi-qla2xxx-edif-Fix-off-by-one-bug-in-qla_edif_app.patch
