--- a/series.conf
+++ b/series.conf
@@ -53692,6 +53692,7 @@
 	patches.suse/staging-r8712u-fix-control-message-timeout.patch
 	patches.suse/iio-dac-ad5446-Fix-ad5622_write-return-value.patch
 	patches.suse/iio-imu-st_lsm6dsx-Avoid-potential-array-overflow-in.patch
+	patches.suse/coresight-cti-Correct-the-parameter-for-pm_runtime_p.patch
 	patches.suse/ABI-sysfs-kernel-slab-Document-some-stats.patch
 	patches.suse/firmware_loader-fix-pre-allocated-buf-built-in-firmw.patch
 	patches.suse/serial-8250_dw-Drop-wrong-use-of-ACPI_PTR.patch
