--- a/series.conf
+++ b/series.conf
@@ -54492,6 +54492,7 @@
 	patches.suse/floppy-Fix-hang-in-watchdog-when-disk-is-ejected.patch
 	patches.suse/floppy-Add-max-size-check-for-user-space-request.patch
 	patches.suse/nvme-add-iopolicy-module-parameter.patch
+	patches.suse/pinctrl-rockchip-fix-gpio-device-creation.patch
 	patches.suse/debugfs-lockdown-Allow-reading-debugfs-files-that-ar.patch
 	patches.suse/staging-rtl8192e-return-error-code-from-rtllib_softm.patch
 	patches.suse/staging-rtl8192e-rtllib_module-fix-error-handle-case.patch
