--- a/series.conf
+++ b/series.conf
@@ -54841,6 +54841,7 @@
 	patches.suse/ax25-fix-UAF-bugs-of-net_device-caused-by-rebinding-.patch
 	patches.suse/net-usb-qmi_wwan-Add-support-for-Dell-DW5829e.patch
 	patches.suse/net-macb-Align-the-dma-and-coherent-dma-masks.patch
+	patches.suse/dpaa2-eth-unregister-the-netdev-before-disconnecting.patch
 	patches.suse/ice-fix-an-error-code-in-ice_cfg_phy_fec.patch
 	patches.suse/ice-fix-IPIP-and-SIT-TSO-offload.patch
 	patches.suse/drm-vc4-hdmi-Allow-DBLCLK-modes-even-if-horz-timing-.patch
