--- a/series.conf
+++ b/series.conf
@@ -56112,6 +56112,7 @@
 	patches.suse/assoc_array-Fix-BUG_ON-during-garbage-collect.patch
 	patches.suse/netfilter-nf_tables-disallow-non-stateful-expression.patch
 	patches.suse/net-sched-fixed-barrier-to-prevent-skbuff-sticking-i.patch
+	patches.suse/net-enetc-Use-pci_release_region-to-release-some-res.patch
 	patches.suse/netfilter-nf_tables-sanitize-nft_set_desc_concat_par.patch
 	patches.suse/wifi-mac80211-fix-use-after-free-in-chanctx-code.patch
 	patches.suse/soc-rockchip-Fix-refcount-leak-in-rockchip_grf_init.patch
