net: cpsw: Properly initialise struct page_pool_params (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54707,6 +54707,7 @@
 	patches.suse/ibmvnic-remove-unused-wait_capability.patch
 	patches.suse/ping-fix-the-sk_bound_dev_if-match-in-ping_lookup.patch
 	patches.suse/yam-fix-a-memory-leak-in-yam_siocdevprivate.patch
+	patches.suse/net-cpsw-Properly-initialise-struct-page_pool_params.patch
 	patches.suse/gve-Fix-GFP-flags-when-allocing-pages.patch
 	patches.suse/net-bridge-vlan-fix-single-net-device-option-dumping.patch
 	patches.suse/ipv4-tcp-send-zero-IPID-in-SYNACK-messages.patch
