--- a/series.conf
+++ b/series.conf
@@ -54299,6 +54299,7 @@
 	patches.suse/random-document-add_hwgenerator_randomness-with-othe.patch
 	patches.suse/random-fix-data-race-on-crng_node_pool.patch
 	patches.suse/random-fix-data-race-on-crng-init-time.patch
+	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_boot.patch
 	patches.suse/drm-bridge-display-connector-fix-an-uninitialized-po.patch
 	patches.suse/drm-fix-null-ptr-deref-in-drm_dev_init_release.patch
 	patches.suse/drm-panel-kingdisplay-kd097d04-Delete-panel-on-attac.patch
