PCI: qcom: Fix pipe clock imbalance (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56031,6 +56031,7 @@
 	patches.suse/PCI-cadence-Fix-find_first_zero_bit-limit.patch
 	patches.suse/PCI-dwc-Fix-setting-error-return-on-MSI-DMA-mapping-.patch
 	patches.suse/PCI-imx6-Fix-PERST-start-up-sequence.patch
+	patches.suse/PCI-qcom-Fix-pipe-clock-imbalance.patch
 	patches.suse/PCI-qcom-Fix-runtime-PM-imbalance-on-probe-errors.patch
 	patches.suse/PCI-qcom-Fix-unbalanced-PHY-init-on-probe-errors.patch
 	patches.suse/PCI-rockchip-Fix-find_first_zero_bit-limit.patch
