--- a/series.conf
+++ b/series.conf
@@ -55601,6 +55601,7 @@
 	patches.suse/ALSA-usb-audio-Increase-max-buffer-size.patch
 	patches.suse/ALSA-pcm-Test-for-silence-field-in-struct-pcm_format.patch
 	patches.suse/ALSA-usb-audio-Limit-max-buffer-and-period-sizes-per.patch
+	patches.suse/net-dsa-felix-suppress-EPROBE_DEFER-errors.patch
 	patches.suse/ice-arfs-fix-use-after-free-when-freeing-rx_cpu_rmap.patch
 	patches.suse/ath9k-Properly-clear-TX-status-area-before-reporting.patch
 	patches.suse/mt76-Fix-undefined-behavior-due-to-shift-overflowing.patch
