ipmi: ssif: initialize ssif_info->client early (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54214,6 +54214,7 @@
 	patches.suse/RDMA-hns-Replace-kfree-with-kvfree.patch
 	patches.suse/HID-holtek-fix-mouse-probing.patch
 	patches.suse/KVM-VMX-Fix-stale-docs-for-kvm-intel.emulate_invalid.patch
+	patches.suse/ipmi-ssif-initialize-ssif_info-client-early.patch
 	patches.suse/ipmi-bail-out-if-init_srcu_struct-fails.patch
 	patches.suse/ipmi-Fix-UAF-when-uninstall-ipmi_si-and-ipmi_msghand.patch
 	patches.suse/tee-handle-lookup-of-shm-with-reference-count-0.patch
