enetc: Fix endianness issues for enetc_qos (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -46798,6 +46798,7 @@
 	patches.suse/ionic-flatten-calls-to-ionic_lif_rx_mode.patch
 	patches.suse/ionic-change-set_rx_mode-from_ndo-to-can_sleep.patch
 	patches.suse/ionic-useful-names-for-booleans.patch
+	patches.suse/enetc-Fix-endianness-issues-for-enetc_qos.patch
 	patches.suse/ibmvnic-Introduce-indirect-subordinate-Command-Respo.patch
 	patches.suse/ibmvnic-Introduce-batched-RX-buffer-descriptor-trans.patch
 	patches.suse/ibmvnic-Introduce-xmit_more-support-using-batched-su.patch
