s390/qeth: cache link_info for ethtool (bsc#1202262 LTC#199322).

--- a/series.conf
+++ b/series.conf
@@ -13576,6 +13576,7 @@
 	patches.suse/net-phy-Warn-about-incorrect-mdio_bus_phy_resume-sta.patch
 	patches.suse/virtio_net-fix-memory-leak-inside-XPD_TX-with-mergea.patch
 	patches.suse/atm-idt77252-fix-use-after-free-bugs-caused-by-tst_t.patch
+	patches.suse/s390-qeth-cache-link_info-for-ethtool
 	patches.suse/Bluetooth-L2CAP-Fix-l2cap_global_chan_by_psm-regress.patch
 	patches.suse/Bluetooth-MGMT-Fixes-build-warnings-with-C-1.patch
 	patches.suse/geneve-fix-TOS-inheriting-for-ipv4.patch
