Makefile: link with -z noexecstack --no-warn-rwx-segments (binutils-2.39).

--- a/series.conf
+++ b/series.conf
@@ -89,6 +89,7 @@
 	patches.suse/tools-bpf_jit_disasm-Don-t-display-disassembler-four.patch
 	patches.suse/tools-bpftool-Fix-compilation-error-with-new-binutil.patch
 	patches.suse/tools-bpftool-Don-t-display-disassembler-four-args-f.patch
+	patches.suse/Makefile-link-with-z-noexecstack-no-warn-rwx-segment.patch
 	########################################################
 	# end of sorted patches
 	########################################################
