--- a/series.conf
+++ b/series.conf
@@ -90,6 +90,7 @@
 	patches.suse/tools-bpftool-Fix-compilation-error-with-new-binutil.patch
 	patches.suse/tools-bpftool-Don-t-display-disassembler-four-args-f.patch
 	patches.suse/Makefile-link-with-z-noexecstack-no-warn-rwx-segment.patch
+	patches.suse/x86-link-vdso-and-boot-with-z-noexecstack-no-warn-rw.patch
 	########################################################
 	# end of sorted patches
 	########################################################
