rpm/kernel-binary.spec.in: simplify find for usrmerged
The type test and print line are the same for both cases. The usrmerged
case only ignores more, so refactor it to make it more obvious.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -1030,11 +1030,11 @@ add_dirs_to_filelist >> %my_builddir/kernel-devel.files
 	     ! -path '*/modules.builtin' \
 	     ! -path '*/modules.builtin.modinfo' \) -printf '%%%%ghost /%%p\n' \
 	       -o -name '*.ko' -prune \
+	       -o \( -type f \
 %if 0%{?usrmerged}
-	       -o \( -type f ! -path '*/symtypes*' ! -path '*/vmlinu*' \) -printf '/%%p\n'
-%else
-	       -o -type f -printf '/%%p\n'
+		! -path '*/symtypes*' ! -path '*/vmlinu*' \
 %endif
+		\) -printf '/%%p\n'
 	cat %my_builddir/base-modules
     fi
     if test %CONFIG_MODULE_SIG = "y" -a -d etc/uefi/certs; then
