--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -97,6 +97,9 @@ done )
 
 %ifarch %ix86 x86_64
 %define install_vdso 1
+%if 0%{?suse_version} > 1500 || 0%{?sle_version} >= 150500
+%define separate_vdso 1
+%endif
 %else
 %define install_vdso 0
 %endif
@@ -1024,7 +1027,11 @@ add_dirs_to_filelist >> %my_builddir/kernel-devel.files
     done
 
     if [ %CONFIG_MODULES = y ]; then
-	find %{?usrmerged:usr/}lib/modules/%kernelrelease-%build_flavor \
+	MODULES=%{?usrmerged:usr/}lib/modules/%kernelrelease-%build_flavor
+	find "$MODULES" \
+%if 0%{?separate_vdso}
+	    -path "$MODULES/vdso" -prune -o \
+%endif
 	    -type d -o \
 	    \( -path '*/modules.*' ! -path '*/modules.order' \
 	     ! -path '*/modules.builtin' \
@@ -1293,6 +1300,23 @@ kmsg message documentation comments.
 %files man
 %defattr(-,root,root)
 /usr/share/man/man9/*
+%endif
+
+%if 0%{?separate_vdso}
+%package vdso
+Summary:        vdso binaries for debugging purposes
+Group:          System/Kernel
+
+%description vdso
+This package includes the vdso binaries. They can be used for debugging. The
+actual binary linked to the programs is loaded from the in-memory image, not
+from this package.
+
+
+%source_timestamp
+%files vdso
+%defattr(-,root,root)
+/%{?usrmerged:usr/}lib/modules/%kernelrelease-%build_flavor/vdso/
 %endif
 
 %package devel
