blacklist.conf: Add 7b3c36fc4c23 ptrace: fix task_join_group_stop() for the case when current is traced

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1568,3 +1568,4 @@ c200e4bb44e80b343c09841e7caaaca0aac5e5fa # UML not used
 734f3719d3438f9cc181d674c33ca9762e9148a1 # m68k specific
 7c8c0291f84027558bd5fca5729cbcf288c510f4 #drivers/net/ethernet: clean up unused assignments
 b2ac9800cfe0f8da16abc4e74e003440361c112e # already applied
+7b3c36fc4c231ca532120bbc0df67a12f09c1d96 # not justified, see bsc#1201611
