module: Ignore _GLOBAL_OFFSET_TABLE_ when warning for undefined symbols (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -49039,6 +49039,7 @@
 	patches.suse/objtool-fix-error-handling-for-std-cld-warnings.patch
 	patches.suse/objtool-fix-retpoline-detection-in-asm-code.patch
 	patches.suse/objtool-fix-cold-section-suffix-check-for-newer-versions-of-gcc.patch
+	patches.suse/module-Ignore-_GLOBAL_OFFSET_TABLE_-when-warning-for.patch
 	patches.suse/HID-i2c-hid-Add-I2C_HID_QUIRK_NO_IRQ_AFTER_RESET-for.patch
 	patches.suse/HID-wacom-Ignore-attempts-to-overwrite-the-touch_max.patch
 	patches.suse/HID-core-detect-and-skip-invalid-inputs-to-snto32.patch
