--- a/series.conf
+++ b/series.conf
@@ -13635,6 +13635,7 @@
 	patches.suse/sched-preempt-Tell-about-PREEMPT_DYNAMIC-on-kernel-h.patch
 	patches.suse/nvme-consider-also-host_iface-when-checking-ip-options.patch
 	patches.suse/drm-udl-Replace-semaphore-with-a-simple-wait-queue.patch
+	patches.suse/drm-udl-Sync-pending-URBs-at-suspend-disconnect.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
