--- a/series.conf
+++ b/series.conf
@@ -13636,6 +13636,7 @@
 	patches.suse/nvme-consider-also-host_iface-when-checking-ip-options.patch
 	patches.suse/drm-udl-Replace-semaphore-with-a-simple-wait-queue.patch
 	patches.suse/drm-udl-Sync-pending-URBs-at-suspend-disconnect.patch
+	patches.suse/drm-udl-Kill-pending-URBs-at-suspend-and-disconnect.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
