--- a/series.conf
+++ b/series.conf
@@ -13637,6 +13637,7 @@
 	patches.suse/drm-udl-Replace-semaphore-with-a-simple-wait-queue.patch
 	patches.suse/drm-udl-Sync-pending-URBs-at-suspend-disconnect.patch
 	patches.suse/drm-udl-Kill-pending-URBs-at-suspend-and-disconnect.patch
+	patches.suse/drm-udl-Replace-BUG_ON-with-WARN_ON.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
