--- a/series.conf
+++ b/series.conf
@@ -13645,6 +13645,7 @@
 	patches.suse/Revert-drm-udl-Kill-pending-URBs-at-suspend-and-disc.patch
 	patches.suse/drm-udl-Suppress-error-print-for-EPROTO-at-URB-compl.patch
 	patches.suse/drm-udl-Increase-the-default-URB-list-size-to-20.patch
+	patches.suse/drm-udl-Add-parameter-to-set-number-of-URBs.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
