drm/udl: Increase the default URB list size to 20 (bsc#1195917).

--- a/series.conf
+++ b/series.conf
@@ -13644,6 +13644,7 @@
 	patches.suse/drm-udl-Enable-damage-clipping.patch
 	patches.suse/Revert-drm-udl-Kill-pending-URBs-at-suspend-and-disc.patch
 	patches.suse/drm-udl-Suppress-error-print-for-EPROTO-at-URB-compl.patch
+	patches.suse/drm-udl-Increase-the-default-URB-list-size-to-20.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
