drm/udl: Don't re-initialize stuff at retrying the URB list allocation (bsc#1195917).

--- a/series.conf
+++ b/series.conf
@@ -13649,6 +13649,7 @@
 	patches.suse/drm-udl-Drop-unneeded-alignment.patch
 	patches.suse/drm-udl-Fix-potential-URB-leaks.patch
 	patches.suse/drm-udl-Fix-inconsistent-urbs.count-value-during-udl.patch
+	patches.suse/drm-udl-Don-t-re-initialize-stuff-at-retrying-the-UR.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
