Revert "drm/udl: Kill pending URBs at suspend and disconnect" (bsc#1195917).

--- a/series.conf
+++ b/series.conf
@@ -13642,6 +13642,7 @@
 	patches.suse/0001-drm-udl-Restore-display-mode-on-resume.patch
 	patches.suse/0001-drm-udl-Add-reset_resume.patch
 	patches.suse/drm-udl-Enable-damage-clipping.patch
+	patches.suse/Revert-drm-udl-Kill-pending-URBs-at-suspend-and-disc.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
