drm/udl: Suppress error print for -EPROTO at URB completion (bsc#1195917).

--- a/series.conf
+++ b/series.conf
@@ -13643,6 +13643,7 @@
 	patches.suse/0001-drm-udl-Add-reset_resume.patch
 	patches.suse/drm-udl-Enable-damage-clipping.patch
 	patches.suse/Revert-drm-udl-Kill-pending-URBs-at-suspend-and-disc.patch
+	patches.suse/drm-udl-Suppress-error-print-for-EPROTO-at-URB-compl.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
