drm/udl: Sync pending URBs at the end of suspend (bsc#1195917).

--- a/series.conf
+++ b/series.conf
@@ -13650,6 +13650,7 @@
 	patches.suse/drm-udl-Fix-potential-URB-leaks.patch
 	patches.suse/drm-udl-Fix-inconsistent-urbs.count-value-during-udl.patch
 	patches.suse/drm-udl-Don-t-re-initialize-stuff-at-retrying-the-UR.patch
+	patches.suse/drm-udl-Sync-pending-URBs-at-the-end-of-suspend.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
