drm/udl: Fix inconsistent urbs.count value during udl_free_urb_list() (bsc#1195917).

--- a/series.conf
+++ b/series.conf
@@ -13648,6 +13648,7 @@
 	patches.suse/drm-udl-Add-parameter-to-set-number-of-URBs.patch
 	patches.suse/drm-udl-Drop-unneeded-alignment.patch
 	patches.suse/drm-udl-Fix-potential-URB-leaks.patch
+	patches.suse/drm-udl-Fix-inconsistent-urbs.count-value-during-udl.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
