--- a/series.conf
+++ b/series.conf
@@ -56455,6 +56455,7 @@
 	patches.suse/netfilter-nf_queue-do-not-allow-packet-truncation-be.patch
 	patches.suse/virtio-net-fix-the-race-between-refill-work-and-clos.patch
 	patches.suse/meson-mx-socinfo-Fix-refcount-leak-in-meson_mx_socin.patch
+	patches.suse/firmware-tegra-bpmp-Do-only-aligned-access-to-IPC-me.patch
 	patches.suse/soc-fsl-guts-machine-variable-might-be-unset.patch
 	patches.suse/regulator-of-Fix-refcount-leak-bug-in-of_get_regulat.patch
 	patches.suse/ACPI-CPPC-Do-not-prevent-CPPC-from-working-in-the-fu.patch
