tracing/kprobes: Check whether get_kretprobe() returns NULL in kretprobe_dispatcher() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12717,6 +12717,7 @@
 	patches.suse/0001-ethtool-Fix-get-module-eeprom-fallback.patch
 	patches.suse/selftests-netfilter-correct-PKTGEN_SCRIPT_PATHS-in-n.patch
 	patches.suse/virtio_net-fix-xdp_rxq_info-bug-after-suspend-resume.patch
+	patches.suse/tracing-kprobes-Check-whether-get_kretprobe-returns-.patch
 	patches.suse/ata-libata-add-qc-flags-in-ata_qc_complete_template-.patch
 	patches.suse/drm-sun4i-Fix-crash-during-suspend-after-component-b.patch
 	patches.suse/drm-i915-Implement-w-a-22010492432-for-adl-s.patch
