--- a/series.conf
+++ b/series.conf
@@ -12961,6 +12961,7 @@
 	patches.suse/drm-i915-fix-a-possible-refcount-leak-in-intel_dp_ad.patch
 	patches.suse/drm-panfrost-Put-mapping-instead-of-shmem-obj-on-pan.patch
 	patches.suse/drm-panfrost-Fix-shrinker-list-corruption-by-madvise.patch
+	patches.suse/tracing-histograms-Fix-memory-leak-problem.patch
 	patches.suse/ASoC-sgtl5000-Fix-noise-on-shutdown-remove.patch
 	patches.suse/ASoC-tas2764-Add-post-reset-delays.patch
 	patches.suse/ASoC-tas2764-Fix-and-extend-FSYNC-polarity-handling.patch
