ACPI: VIOT: Fix ACS setup (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13133,6 +13133,7 @@
 	patches.suse/ACPI-EC-Drop-the-EC_FLAGS_IGNORE_DSDT_GPE-quirk.patch
 	patches.suse/ACPI-PM-save-NVS-memory-for-Lenovo-G40-45.patch
 	patches.suse/ACPI-LPSS-Fix-missing-check-in-register_device_clock.patch
+	patches.suse/ACPI-VIOT-Fix-ACS-setup.patch
 	patches.suse/ACPI-video-Force-backlight-native-for-some-TongFang-.patch
 	patches.suse/ACPI-video-Shortening-quirk-list-by-identifying-Clev.patch
 	patches.suse/Documentation-ACPI-EINJ-Fix-obsolete-example.patch
