--- a/series.conf
+++ b/series.conf
@@ -13119,6 +13119,7 @@
 	patches.suse/ARM-dts-imx6ul-fix-keypad-compatible.patch
 	patches.suse/ARM-dts-imx6ul-fix-csi-node-compatible.patch
 	patches.suse/ARM-dts-imx6ul-fix-lcdif-node-compatible.patch
+	patches.suse/ARM-dts-imx6ul-fix-qspi-node-compatible.patch
 	patches.suse/ARM-dts-qcom-mdm9615-add-missing-PMIC-GPIO-reg.patch
 	patches.suse/ARM-dts-qcom-pm8841-add-required-thermal-sensor-cell.patch
 	patches.suse/arm64-dts-qcom-msm8916-Fix-typo-in-pronto-remoteproc.patch
