ARM: dts: imx6ul: change operating-points to uint32-matrix (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13115,6 +13115,7 @@
 	patches.suse/arm64-tegra-Fix-SDMMC1-CD-on-P2888.patch
 	patches.suse/ARM-dts-imx7d-colibri-emmc-add-cpu1-supply.patch
 	patches.suse/ARM-dts-imx6ul-add-missing-properties-for-sram.patch
+	patches.suse/ARM-dts-imx6ul-change-operating-points-to-uint32-mat.patch
 	patches.suse/ARM-dts-qcom-mdm9615-add-missing-PMIC-GPIO-reg.patch
 	patches.suse/ARM-dts-qcom-pm8841-add-required-thermal-sensor-cell.patch
 	patches.suse/arm64-dts-qcom-msm8916-Fix-typo-in-pronto-remoteproc.patch
