ARM: shmobile: rcar-gen2: Increase refcount for new reference (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13095,6 +13095,7 @@
 	patches.suse/ARM-OMAP2-pdata-quirks-Fix-refcount-leak-bug.patch
 	patches.suse/ARM-OMAP2-Fix-refcount-leak-in-omap3xxx_prm_late_ini.patch
 	patches.suse/cpufreq-zynq-Fix-refcount-leak-in-zynq_get_revision.patch
+	patches.suse/ARM-shmobile-rcar-gen2-Increase-refcount-for-new-ref.patch
 	patches.suse/ARM-bcm-Fix-refcount-leak-in-bcm_kona_smc_init.patch
 	patches.suse/soc-renesas-r8a779a0-sysc-Fix-A2DP1-and-A2CV-2357-PD.patch
 	patches.suse/meson-mx-socinfo-Fix-refcount-leak-in-meson_mx_socin.patch
