ARM: dts: qcom: sdx55: Fix the IRQ trigger type for UART (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13121,6 +13121,7 @@
 	patches.suse/ARM-dts-imx6ul-fix-lcdif-node-compatible.patch
 	patches.suse/ARM-dts-imx6ul-fix-qspi-node-compatible.patch
 	patches.suse/ARM-dts-qcom-mdm9615-add-missing-PMIC-GPIO-reg.patch
+	patches.suse/ARM-dts-qcom-sdx55-Fix-the-IRQ-trigger-type-for-UART.patch
 	patches.suse/ARM-dts-qcom-pm8841-add-required-thermal-sensor-cell.patch
 	patches.suse/arm64-dts-qcom-msm8916-Fix-typo-in-pronto-remoteproc.patch
 	patches.suse/arm64-dts-qcom-sm8250-add-missing-PCIe-PHY-clock-cel.patch
