arm64: dts: qcom: ipq8074: fix NAND node name (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13130,6 +13130,7 @@
 	patches.suse/ARM-dts-qcom-sdx55-Fix-the-IRQ-trigger-type-for-UART.patch
 	patches.suse/ARM-dts-qcom-pm8841-add-required-thermal-sensor-cell.patch
 	patches.suse/arm64-dts-qcom-msm8916-Fix-typo-in-pronto-remoteproc.patch
+	patches.suse/arm64-dts-qcom-ipq8074-fix-NAND-node-name.patch
 	patches.suse/arm64-dts-qcom-sm8250-add-missing-PCIe-PHY-clock-cel.patch
 	patches.suse/arm64-dts-qcom-qcs404-Fix-incorrect-USB2-PHYs-assign.patch
 	patches.suse/dt-bindings-arm-qcom-fix-MSM8916-MTP-compatibles.patch
