crypto: sun8i-ss - do not allocate memory when handling hash requests (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12326,6 +12326,7 @@
 	patches.suse/crypto-ecrdsa-Fix-incorrect-use-of-vli_cmp.patch
 	patches.suse/crypto-sun8i-ss-rework-handling-of-IV.patch
 	patches.suse/crypto-sun8i-ss-handle-zero-sized-sg.patch
+	patches.suse/crypto-sun8i-ss-do-not-allocate-memory-when-handling.patch
 	patches.suse/crypto-cryptd-Protect-per-CPU-resource-by-disabling-.patch
 	patches.suse/crypto-qat-set-to-zero-DH-parameters-before-free.patch
 	patches.suse/crypto-qat-fix-memory-leak-in-RSA.patch
