- drm/bridge: tc358767: Move (e)DP bridge endpoint parsing into   dedicated function (git-fixes). - Refresh   patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch.

--- a/series.conf
+++ b/series.conf
@@ -12055,6 +12055,7 @@
 	patches.suse/0003-tilcdc-tilcdc_external-fix-an-incorrect-NULL-check-o.patch
 	patches.suse/drm-edid-fix-invalid-EDID-extension-block-filtering.patch
 	patches.suse/drm-bridge-adv7511-clean-up-CEC-adapter-when-probe-f.patch
+	patches.suse/drm-bridge-tc358767-Move-e-DP-bridge-endpoint-parsin.patch
 	patches.suse/drm-bridge-icn6211-Fix-register-layout.patch
 	patches.suse/0004-drm-bridge-icn6211-Fix-HFP_HSW_HBP_HI-and-HFP_MIN-ha.patch
 	patches.suse/drm-nouveau-clk-Fix-an-incorrect-NULL-check-on-list-.patch
